--- a/BookingApp/package.json
+++ b/BookingApp/package.json
@@ -25,6 +25,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.20.1",
     "react-native-modal-datetime-picker": "^18.0.0",
